<resources>
    <string name="app_name">OneShotRPG</string>
    <string name="home_pesquisa">Pesquisar</string>
    <string name="your_cart">Seu carrinho</string>
    <string name="end_cart">Finalizar Compra</string>
    <string name="back">Voltar</string>
    <string name="cart">Carrinho</string>
    <string name="detalhes">Ver detalhes</string>
    <string name="quantidade">Quantidade</string>
    <string name="btnprodutos">Produtos</string>
    <string name="btncarrinho">Carrinho</string>
    <string name="btncompras">Pedidos Anteriores</string>
    <string name="btnsair">Sair</string>
    <string name="carrinho">Adicionar ao Carrinho</string>
    <string name="bemvindo">Bem vindo,</string>
    <string name="perfil">Perfil</string>
    <string name="sobre">Sobre a Aplicação</string>
</resources>